--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -26,6 +26,7 @@
 .contact-sections {
 	display: flex;
 	flex-wrap: wrap;
+	max-width: 100vw;
 }
 
 .social-container {
@@ -34,17 +35,26 @@
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap-reverse;
-	min-width: 25rem;
+	min-width: 22rem;
 	padding: 0 2rem;
 	z-index: 11;
 }
 
 .contact-about {
 	flex: 1 1 45%;
-	min-width: 25rem;
+	min-width: 22rem;
 	padding: 0 1rem;
 	margin: 0 1rem 1rem 1rem;
 	background: hsla(0, 0%, 0%, 0.25);
 	line-height: 1.7;
 	text-align: left;
+}
+
+@media (max-width: 420px) {
+	.contact-about {
+		min-width: 16rem;
+	}
+	.social-container {
+		padding: 0.5rem;
+	}
 }
